# ClusteringTextData

./: main.py  pyproject.toml
data/: comments_1000.xlsx  comments_1000_utf8.csv  comments_1000_verified.xlsx
src/: __init__.py  clustring_data.py  label_consolidation.py  main.py  model.py  prompts.py
src/agentic_banking_clustering/: __init__.py  models.py  prompts.py
src/agentic_banking_clustering/services/: __init__.py  excel_loader.py  utils.py  worker.py
src/incremental_mvp_clustering/: __init__.py  agentic_models.py  agentic_post_processing.py  agentic_prompts.py  main.py  models.py  pipeline.py  prompts.py  prompts_old.py
src/langchain_agentic_clustering/: README.md  __init__.py  main.py  models.py  orchestrator.py  prompts.py
src/langchain_agentic_clustering/services/: __init__.py  critic.py  excel_loader.py  local_reclusterer.py  neighborhood_selector.py  patch_evaluator.py  session.py  snapshot_builder.py  structure_extractor.py  text_utils.py
src/stable_structured_clustering/: README.md  __init__.py  main.py  models.py  pipeline.py  prompts.py
src/stable_structured_clustering/services/: __init__.py  candidate_retriever.py  excel_loader.py  input_validator.py  label_selector.py  output_builder.py  parent_cluster_builder.py  prototype_builder.py  specific_cluster_builder.py  structure_extractor.py  text_utils.py
src/universal_text_clustering/: __init__.py  main.py  models.py  pipeline.py  prompts.py
src/universal_text_clustering/services/: __init__.py  dense_retriever.py  group_name_generator.py  input_validator.py  label_assigner.py  (+5 more)
