[project]
name = "clusteringtextdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langgraph>=1.1.6",
    "langchain-openrouter>=0.2.1",
    "openpyxl>=3.1.5",
    "rank-bm25>=0.2.2",
]
